--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@slack/client": "^3.5.4",
     "co": "^4.6.0",
+    "fancy-log": "^1.2.0",
     "got": "^6.3.0",
     "promise-retry": "^1.1.1",
-    "slack": "^7.7.1",
     "thenify": "^3.2.0"
   },
   "author": {
